k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tictactoe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tictactoe
  template:
    metadata:
      labels:
        app: tictactoe
    spec:
      containers:
      - name: tictactoe
        image: tictactoe:v2
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: tictactoe-service
spec:
  type: NodePort
  selector:
    app: tictactoe
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30500
