k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tictactoe-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-name: "tictactoe-server"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  ingressClassName: public
  rules:
  - host: tictactoe.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tictactoe-service
            port:
              number: 5000
